kubernetes/servicemonitors/monitor-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-metric-monitor
  namespace: monitoring
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.anhgrew.nguyenanhdevops.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port: 
                  number: 3000            
  tls:
  - hosts:
    - grafana.anhgrew.nguyenanhdevops.live
    secretName: grafana-anhgrew-nguyenanhdevops-live
