kubernetes/servicemonitors/monitor-ingress-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service-public
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: prometheus
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: prometheus-service-public-port
    protocol: TCP
    port: 80
    targetPort: 9090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl-metric-monitor-prometheus
  namespace: monitoring
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt    
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.anhgrew.nguyenanhdevops.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service-public
                port: 
                  number: 80   
  tls:  
  - hosts:
    - prometheus.anhgrew.nguyenanhdevops.live
    secretName: prometheus-anhgrew-nguyenanhdevops-live
